samples/_failures_safe/1761372151_edd3a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ab633ab.c: In function ‘main’:
./samples/SAFE/__tmp_5ab633ab.c:182:25: error: missing terminating " character
  182 |         fprintf(stderr, "Empty input\n
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ab633ab.c:182:9: error: expected expression at end of input
  182 |         fprintf(stderr, "Empty input\n
      |         ^~~~~~~
./samples/SAFE/__tmp_5ab633ab.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ab633ab.c:182:9: error: expected declaration or statement at end of input
